--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
     --workflow-test: 142 76% 36%;
     --workflow-manual: 258 90% 66%;
     --workflow-idea: 45 93% 58%;
+    --workflow-economics: 25 95% 53%;
 
     /* Clean secondary palette */
     --secondary: 210 40% 96%;
